3/1/2013 Jet Goodson <jetgoodson@gmail.com>
    M utilityBelt.R
    - added functions to apply jitter and synthesize data
    - note that is requires installing matrixcalc	
    M LitteraLector.R
    - added virtual and synthesized SVM models, more config variables

2/28/2013 Jet Goodson <jetgoodson@gmail.com>
    M visualyze.R
    - added save ability
    M rageAgainstTheSupportVectorMachine.R
    - split into a train and test function
    M LitteraLector.R
    - added ability to save SVM then reload	
    M utilityBelt.R
    - added function to split into test and train datasets
	
2/28/2013 Jet Goodson <jetgoodson@gmail.com>
    M visualyze.R
    - tweaked the labels to be 0-9	
    M rageAgainstTheSupportVectorMachine.R
    - modified table output to have different names for different calls to rage
    M LitteraLector.R
    - added call to save SVM and reload it as example	

02/26/2013 Katie Malone <cmmalone.158@gmail.com>
    A visualyze.R
    - draws a matrix of prediction vs. truth for SVM
    - integrated with rageAgainst.R

02/11/2013 Jet Goodson <jetgoodson@gmail.com>
	M rageAgainstTheSupportVectorMachine.R
	- made the damn thing work
	M LitteraLector.R
	M utilityBelt.R
	- got rid of nearZeroVar thing
        M LitteraLector.R
	- adapted John BM's method of nixing constant columns
	
02/10/2013 Jet Goodson <jetgoodson@gmail.com>
	- added utilityBelt.R
	- holds various helper functions, mostly for
	  changing resolution of character images
        - added data/test_ReducedRez.csv
        - added data/train_ReducedRez.csv
	- feature-reduced versions of test.csv and train.csv
	M LitteraLector.R
	- made into more of a control macro
	M rageAgainstTheSupportVectorMachine.R
	- cleaned up
	
02/7/2013 Jet Goodson <jetgoodson@gmail.com>
	- added rageAgainstTheSupportVectorMachine.R
	- put good code in it, up to a grid search for cost/gamma
	- added randomForestForTheTrees.R
	- empty for now
	
01/30/2013 Katie Malone <cmmalone.158@gmail.com>
	- cloned repo
