@@ -1,0 +1,2 @@
+source("LitteraLector.R")
+LitteraLector()
